--- a/dotnet-crud-api/appsettings.json
+++ b/dotnet-crud-api/appsettings.json
@@ -1,9 +1,8 @@
+
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=KatalogProdukDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
+
